<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/lyt_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/txt_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lyt_frame">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_yuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_yuk"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_yuk"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_yuk"
                android:layout_marginStart="20dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/txt_yuk_tipi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/txt_yuk"
                android:text="@string/txt_yukleme"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@+id/txt_yuk_tipi"
                android:adjustViewBounds="true"
                android:src="@drawable/img_irsaliye" />

            <EditText
                android:id="@+id/edt_yuk_tipi"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_yuk_tipi"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/edt_yuk"
                android:singleLine="true" />


            <TextView
                android:id="@+id/txt_yukleme_adedi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_yuk"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_adedi"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_yukleme_adedi"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_yukleme_adedi"
                android:layout_marginStart="20dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/txt_yuklerin_kilosu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_yuk_tipi"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/txt_yukleme_adedi"
                android:text="@string/txt_kilo"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_yuklerin_kilosu"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_yukleme_adedi"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/edt_yukleme_adedi"
                android:singleLine="true" />

            <TextView
                android:id="@+id/txt_yukleme_saati"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_yukleme_adedi"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_saat"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_yukleme_saati"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_yukleme_saati"
                android:layout_marginStart="20dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/txt_hacim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_yukleme_adedi"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/txt_yukleme_saati"
                android:text="@string/txt_hacim"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_hacim"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_hacim"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/edt_yukleme_saati"
                android:singleLine="true" />

            <TextView
                android:id="@+id/txt_cikis_gümrük"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_yukleme_saati"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_cikis"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_cikis_gümrük"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_cikis_gümrük"
                android:layout_marginStart="20dp"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/imgView_gumruk"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_below="@+id/edt_cikis_gümrük"
                android:layout_marginStart="20dp"
                android:background="@color/gray" />

            <ImageButton
                android:id="@+id/btn_take_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgView_gumruk"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:src="@drawable/btn_yukleme" />

        </RelativeLayout>

    </ScrollView>


    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/img_fullscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />


</RelativeLayout>